[gd_scene load_steps=4 format=3 uid="uid://elctpthgt6i5"]

[ext_resource type="Script" path="res://Scenes/SceneController.gd" id="1_ste0x"]
[ext_resource type="PackedScene" uid="uid://dm0epwcnjr1c3" path="res://Scenes/UIs/Menus/Main_Menu/main_menu.tscn" id="2_m0op5"]
[ext_resource type="AudioStream" uid="uid://0iel5xttwdmc" path="res://Assets/Audio/Run.ogg" id="3_dgaip"]

[node name="SceneController" type="Node"]
process_mode = 1
script = ExtResource("1_ste0x")

[node name="Main_Menu" parent="." instance=ExtResource("2_m0op5")]

[node name="Weather" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Audio" type="Node" parent="."]
process_mode = 3

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_dgaip")
autoplay = true

[node name="Timer" type="Timer" parent="."]
process_mode = 3
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
